[project]
name = "python-async"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "aiosqlite==0.17.0",
    "asyncpg==0.30.0",
    "django==3.2.3",
    "jupyter>=1.1.1",
    "psycopg2-binary>=2.9.10",
    "requests==2.25.1",
]

[tool.uv.workspace]
members = ["python-async-scenarios"]
